# openbis-chef

./: .env  .gitignore  .gitlab-ci.yml  README.md  Taskfile.yml  architecture.adoc  docker-compose.yml  gitlab-ci.yml  package.json
schemas/: schema_402_clean.json
services/app/: .env  Caddyfile  Dockerfile  Dockerfile.dev  dto.js  generate_names.js  generate_names.ts  index.html  moduleNames.json  nginx.conf  package.json  tsconfig.json  vite.config.ts
services/app/src/: App.css  App.tsx  Demo.css  Demo.tsx  PizzaWorkflow.ts  PolyproWorkflow.ts  SampleGraphDemo.tsx  StepperDemo.tsx  index.css  main.tsx
services/app/src/metagraph/: OperationContext.tsx  metagraph.schema.json  metagraph.ts  useList.ts  useLog.ts  useOperations.ts  useWorkflows.ts
services/app/src/notification/: NotificationContext.ts
services/app/src/openbis/: AuthContext.ts  OpenBisContext.ts  api.ts  dto.ts  identifiers.ts  openbis.ts  openbisService.ts  sampleGraph.ts  typeMappers.tsx
services/app/tests/: TestComponent.tsx  metagraphTest.test.ts  setup.ts  useList.test.ts  useLocalStorage.test.ts  useLocalStorage.test.tsx  useLog.test.ts  useLogin.test.ts  useLogin.test.tsx  useOperations.test.ts  useToken.test.ts
services/metagraph/: prepare_schema.py  pyproject.toml  setup.py
services/metagraph/openflow/: openflow.py
services/metagraph/resources/tests/: flow.yaml
services/metagraph/tests/: test_openflow.py
services/metagraph/windmill/: create_entry.py
services/windmill/: Caddyfile  requirements.txt
utils/: build.gradle.kts  settings.gradle.kts
(+72 files in other folders)
