[tool.poetry]
name = "metagraph"
version = "0.1.0"
description = ""
authors = ["Simone Baffelli <simone.baffelli@empa.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybis = "^1.36.0"
wmill = "^1.139.0"
pydantic = "^2.1.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


